src/style.css
body {
    margin: 1em;
    padding: 0;
}

.pane {
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 250px;
}

.pane > div:nth-child(1) {
    flex: 1 1 auto;
    background-color: #efefef;
    outline: none;
    padding: .75em;
    overflow: auto;
    font-family: monospace;
    min-width: 200px;
    border-radius: .65em;
}
.pane > div:nth-child(2),
.pane > div:nth-child(3) {
    flex: 0 0 auto;
    width: 350px;
}

ul {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    align-items: center;
    margin: 0 0 .75em 0;
    padding: 0;
}

ul.desc2 {
    margin: 1.5em 0 0 0;
}

ul > li:nth-child(2) {
    padding: 0 0 0 .35em;
}

.keyInput {
    height: 1.8em;
    line-height: 1.8em;
    font-size: 1.1em;
    min-width: 200px;
    background-color: #efefef;
    padding: 0 .65em 0 .65em;
    font-family: monospace;
    outline: none;
    letter-spacing: .25em;
    border-radius: 1em;
}

